[3.6] bpo-31675: Fix memory leaks in Tkinter's methods splitlist() and split() (GH-3866)

when pass a string larger than 2 GiB.

Decrease memory requirements for Tcl's bigmem tests.
(cherry picked from commit 27c623c845dd6e4b8e1782666ca3a956636da266)